--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -8,7 +8,7 @@
         android:id="@+id/logScrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/progress"
+        app:layout_constraintBottom_toTopOf="@+id/progressLayout"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
@@ -32,14 +32,19 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <net.gotev.speech.ui.SpeechProgressView
-        android:id="@+id/progress"
-        android:layout_width="120dp"
-        android:layout_height="30dp"
+    <LinearLayout
+        android:id="@+id/progressLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/testButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logScrollView" />
+        app:layout_constraintTop_toBottomOf="@+id/logScrollView">
+
+        <net.gotev.speech.ui.SpeechProgressView
+            android:id="@+id/progress"
+            android:layout_width="120dp"
+            android:layout_height="30dp" />
+    </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/testButton"
@@ -71,5 +76,5 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_percent="0.4" />
+        app:layout_constraintHeight_percent="0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
